# native-audio-node

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
.serena/: project.yml
docs/: WINDOWS_MIC_PROCESS_DETECTION.md
examples/: record-mic.mjs  record-system.mjs  record-wav.mjs  test-devices.mjs  test-native.mjs  test-permission.mjs
native/cpp/: audiotee_bridge.h  audiotee_napi.cpp  coreaudio_bridge.h  coreaudio_napi.cpp
native/macos/swift/: AudioDeviceManager.swift  AudioFormatManager.swift  MicrophoneCapture.swift
native/swift/: AudioBuffer.swift  AudioDeviceManager.swift  AudioFormatConverter.swift  AudioFormatManager.swift  AudioPacket.swift  AudioPermission.swift  AudioTapManager.swift  AudioTeeBridge.swift  AudioTeeErrors.swift  CoreAudioBridge.swift  MicrophoneCapture.swift  NativeAudioRecorder.swift  TapConfiguration.swift  TapMuteBehavior.swift  Utils.swift
native/windows/: windows_bridge.cpp
scripts/: copy-binary.js
src/: audiotee.ts  base-recorder.ts  devices.ts  index.ts  microphone-recorder.ts  permission.ts  system-audio-recorder.ts  types.ts
